--- a/gb/19/6/20/n11334584.md
+++ b/gb/19/6/20/n11334584.md
@@ -1,65 +1,68 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dfh2/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/dfh2/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/dfh2/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/dfh2/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/dfh2/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dfh2/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/dfh2/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/dfh2/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>±¨¸æ£ºÅ¦Ô¼ÊÐÁìÁ¸Ê³È¯¼õ ÒòÓÇÓ°ÏìÒÆÃñÉí·Ý</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/06/031209514983abfa5ee0c235f8c1d8e5-600x400.jpg" />
-<h6>Å¦Ô¼ÊÐÈËÁ¦×ÊÔ´¹ÜÀí¾Ö¸ºÔðÈËGrace Bonilla£¨×ó£©±íÊ¾£¬ÕæÕýÐèÒª¹«¹²¸£ÀûµÄÒÆÃñ£¬²»ÒªÒòÎªµ£ÓÇÓ°ÏìÎ´À´ÒÆÃñ×Ê¸ñµÄÉóÅú£¬¶ø·ÅÆúÁìÈ¡Á¸Ê³È¯¡£ (»ÆÐ¡ÌÃ/´ó¼ÍÔª)
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nsxsof363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/nsxsof363/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nsxsof363/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/nsxsof363/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/nsxsof363/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/nsxsof363/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>æŠ¥å‘Šï¼šçº½çº¦å¸‚é¢†ç²®é£Ÿåˆ¸å‡ å› å¿§å½±å“ç§»æ°‘èº«ä»½</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/06/031209514983abfa5ee0c235f8c1d8e5-600x400.jpg" />
+<h6>çº½çº¦å¸‚äººåŠ›èµ„æºç®¡ç†å±€è´Ÿè´£äººGrace Bonillaï¼ˆå·¦ï¼‰è¡¨ç¤ºï¼ŒçœŸæ­£éœ€è¦å…¬å…±ç¦åˆ©çš„ç§»æ°‘ï¼Œä¸è¦å› ä¸ºæ‹…å¿§å½±å“æœªæ¥ç§»æ°‘èµ„æ ¼çš„å®¡æ‰¹ï¼Œè€Œæ”¾å¼ƒé¢†å–ç²®é£Ÿåˆ¸ã€‚ (é»„å°å ‚/å¤§çºªå…ƒ)
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê06ÔÂ20ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕß»ÆÐ¡ÌÃÅ¦Ô¼±¨µ¼£©19ÈÕ£¬Å¦Ô¼ÊÐÉç»á·þÎñ¾Ö£¨DSS£©ºÍÊÐ³¤ÒÆÃñÊÂÎñ°ì¹«ÊÒ£¨MOIA£©ÕÙ¿ª¼ÇÕß»á£¬ËûÃÇºôÓõÕæÕýÓÐÐèÒª¹«¹²¸£ÀûµÄÒÆÃñ£¬²»ÒªÒòÎªµ£ÓÇÓ°ÏìÎ´À´ÒÆÃñ×Ê¸ñµÄÉóÅú£¬¶ø·ÅÆúÁìÈ¡<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E7%B2%AE%E9%A3%9F%E5%88%B8.md">Á¸Ê³È¯</a>¡£ËûÃÇ½¨ÒéÈôÕæÓÐ¹ËÂÇ£¬Ó¦ÏòÊÐ¸®µÄ·¨ÂÉ·þÎñ»òÖÂµç311ÇóÖú£¬ËûÃÇ¿ÉÐ­ÖúÃñÖÚ×ö³ö×îºÃµÄÑ¡Ôñ£¬µÃµ½Ó¦ÓÐµÄ°ïÖú¡£</p>
-<figure id="11334589" style="width: 500px" class="wp-caption aligncenter"><img src="http://i.epochtimes.com/assets/uploads/2019/06/ced06f878d7b27d5eaaf89feb7aa6636-450x300.jpg" alt="ÊÐ³¤ÒÆÃñÊÂÎñ°ì¹«ÊÒ¸±¾Ö³¤ÁÖ²ÉÀé±íÊ¾£¬¶ÔÓÚ¡°¹«¹²¸ºµ£¡±Õþ²ß£¬ÊÐ¸®Ìá¹©·¨ÂÉ·þÎñ£¬Ð­ÖúÃñÖÚ×ö³ö¶Ô×ÔÉí×îºÃµÄÑ¡Ôñ¡£" width="500" /><figcaption class="wp-caption-text">ÊÐ³¤ÒÆÃñÊÂÎñ°ì¹«ÊÒ¸±¾Ö³¤ÁÖ²ÉÀé±íÊ¾£¬¶ÔÓÚ¡°¹«¹²¸ºµ£¡±Õþ²ß£¬ÊÐ¸®Ìá¹©·¨ÂÉ·þÎñ£¬Ð­ÖúÃñÖÚ×ö³ö¶Ô×ÔÉí×îºÃµÄÑ¡Ôñ¡££¨»ÆÐ¡ÌÃ/´ó¼ÍÔª£©</figcaption></figure>
-<p>¸ù¾ÝÊÐ¸®×îÐÂ¹«²¼µÄ±¨¸æ·ÖÎö£¬´Ó2018Äê1ÔÂÖÁ2019Äê1ÔÂ£¬¸÷×åÒá¹«Ãñ£¨Citizen£©ºÍ·Ç¹«Ãñ£¨Non-citizen£©ÁìÈ¡<a href="https://github.com/dfh2/djy/blob/master/gb/tag/%E7%B2%AE%E9%A3%9F%E5%88%B8.md">Á¸Ê³È¯</a>£¨SNAP£©µÄ±ÈÀý½ÔÃ÷ÏÔÏÂ½µ¡£ÆäÖÐÑÇÌ«Òá·ûºÏÌõ¼þµÄ·Ç¹«Ãñ£¨Non-citizen£©ÁìÈ¡Á¸Ê³È¯ÊýÁ¿¼õÉÙÁË10.5%£¬¶øÑÇÌ«Òá¹«Ãñ£¨Citizen£©Éí·ÝÁìÈ¡Á¸Ê³È¯µÄ¼õÉÙ1.2%£¬Á½ÕßÏà²î8.75±¶Ö®¶à¡£</p>
-<p>¸Ã±¨¸æÍÆ²â£¬·ûºÏ×Ê¸ñµÄÒÆÃñ¼ÒÍ¥·ÅÆúÁìÈ¡Á¸Ê³È¯£¬Ö÷ÒªÊÇÒòµ£ÓÇÓ°ÏìÎ´À´ÒÆÃñ×Ê¸ñ¡£Íâ½çÒ»Ö±Á÷´«£¬´¨ÆÕÕþ¸®´òËã¹æ·¶Ïà¹ØµÄ¡°¹«¹²¸ºµ£¡±£¨public charge£©Õþ²ß¡£</p>
-<p>ÊÐ³¤ÒÆÃñÊÂÎñ°ì¹«ÊÒ¸±¾Ö³¤ÁÖ²ÉÀé£¨Sonia Lin£©ÈÏÎª£¬ËäÈ»Ã»ÓÐÖ±½ÓµÄÒò¹û¹ØÏµÖ¤Ã÷£¬ÊÇÒòÁª°îÕþ¸®¶Ô¡°¹«¹²¸ºµ£¡±Õþ²ßµÄ¸Ä±ä£¬µ¼ÖÂ·Ç¹«Ãñµ£ÓÇÏÞÖÆÎ´À´ÒÆÃñ×Ê¸ñµÄÉóÅú£¬²Åµ¼ÖÂÁìÈ¡±ÈÀýÏÂ½µ¡£µ«ÊÇËûÃÇÏ£ÍûÃñÖÚ²»Òª¿Ö»Å£¬ÒòÁª°îÕþ¸®»¹Î´¶Ô´Ë¶¨°¸£¬Å¦Ô¼ÊÐ¸®Ìá¹©·¨ÂÉ×ÉÑ¯·þÎñ£¬ÌÖÂÛÊ¹ÓÃ¹«¹²¸£ÀûÊÇ·ñ»áÓ°ÏìÒÆÃñÉí·ÝµÈ¡£</p>
-<p>½üÁ½ÄêÀ´£¬Å¦Ô¼ÊÐÁìÈ¡Á¸Ê³È¯µÄÈËÊý´ó·ùÏÂ½µ£¬ÍË³öÕâÏî¸£ÀûµÄÈËÊý£¬±ÈÔ¤¹ÀµÄ¶àÁË25,000ÈË£¬ÕâÊ¡ÏÂÁËÄÉË°ÈËÇ®Ô¼4Ç§ÍòÃÀÔª£¬µ«°×Ë¼ºÀÊÐ¸®ÈÏÎª£¬Õâ½«¶Ô¾­¼Ã»î¶¯´øÀ´³å»÷£¬ËðÊ§7,200ÍòµÄ¾­¼ÃÐ§Ó¦¡£</p>
-<p>Å¦Ô¼ÊÐÈËÁ¦×ÊÔ´¹ÜÀí¾Ö¸ºÔðÈËGrace Bonilla±íÊ¾£¬ËûÃÇÕÙ¿ªÕâ³¡»áÒéµÄÄ¿µÄ£¬ÊÇÒòÎª¹Û²ìµ½·Ç¹«ÃñµÄÃñÖÚ£¬´ó·ù¼õÉÙÁìÈ¡Á¸Ê³È¯¡£ËûÃÇÏ£ÍûÕæÕý·ûºÏ×Ê¸ñ¡¢ÓÐÐèÒªµÄÃñÖÚ£¬Ó¦¸ÃÈ¥ÉêÇë¹«¹²¸£Àû£¬ÀýÈçÑ§Éú²»Ó¦°¤¶ö¶øÓ°ÏìÑ§Ï°¡£</p>
-<p>Grace BonillaÒ²³ÐÈÏ£¬´¨ÆÕÕþ¸®Ê¹ÕûÌå¾­¼Ã¸´ËÕºÍ¾ÍÒµÂÊÉÏÉý£¬Ê¹ÁìÈ¡¸£ÀûµÄÈËÊýÒ»Ö±ÔÚÏÂ½µ¡£²»¹ýËûÃÇÊÕ¼¯µÄÊý¾ÝÏÔÊ¾£¬·Ç¹«ÃñÁìÈ¡Á¸Ê³È¯µÄ±ÈÀý½Ï¹«ÃñÃ÷ÏÔÏÂ½µÐí¶à¡£</p>
-<p>ÁÖ²ÉÀéºÍÑÇÃÀÁªÃËÑÐ¾¿ÓëÕþ²ßÖ÷ÈÎÊ±ºÆì¿£¨Howard Shih£©½Ô½¨Òé£¬Èç¹ûÂÌ¿¨ÉêÇëºÍ³ÖÓÐÈËµ£ÐÄ¡°¹«¹²¸ºµ£¡±Õþ²ß±ä»¯Ó°ÏìËûÃÇµÄ×Ê¸ñ£¬¿ÉÒÔ²¦´ò311ÕÒµ½ActionNYCÏîÄ¿ÁË½â¸ü¶àÐÅÏ¢¡£¡ó</p>
-<p>ÔðÈÎ±à¼­£º¼ÒÈð</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´06æœˆ20æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…é»„å°å ‚çº½çº¦æŠ¥å¯¼ï¼‰19æ—¥ï¼Œçº½çº¦å¸‚ç¤¾ä¼šæœåŠ¡å±€ï¼ˆDSSï¼‰å’Œå¸‚é•¿ç§»æ°‘äº‹åŠ¡åŠžå…¬å®¤ï¼ˆMOIAï¼‰å¬å¼€è®°è€…ä¼šï¼Œä»–ä»¬å‘¼åçœŸæ­£æœ‰éœ€è¦å…¬å…±ç¦åˆ©çš„ç§»æ°‘ï¼Œä¸è¦å› ä¸ºæ‹…å¿§å½±å“æœªæ¥ç§»æ°‘èµ„æ ¼çš„å®¡æ‰¹ï¼Œè€Œæ”¾å¼ƒé¢†å–<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E7%B2%AE%E9%A3%9F%E5%88%B8.md#1">ç²®é£Ÿåˆ¸</a>ã€‚ä»–ä»¬å»ºè®®è‹¥çœŸæœ‰é¡¾è™‘ï¼Œåº”å‘å¸‚åºœçš„æ³•å¾‹æœåŠ¡æˆ–è‡´ç”µ311æ±‚åŠ©ï¼Œä»–ä»¬å¯ååŠ©æ°‘ä¼—åšå‡ºæœ€å¥½çš„é€‰æ‹©ï¼Œå¾—åˆ°åº”æœ‰çš„å¸®åŠ©ã€‚</p>
+<figure id="11334589" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/06/ced06f878d7b27d5eaaf89feb7aa6636-450x300.jpg" alt="å¸‚é•¿ç§»æ°‘äº‹åŠ¡åŠžå…¬å®¤å‰¯å±€é•¿æž—é‡‡ç¯±è¡¨ç¤ºï¼Œå¯¹äºŽâ€œå…¬å…±è´Ÿæ‹…â€æ”¿ç­–ï¼Œå¸‚åºœæä¾›æ³•å¾‹æœåŠ¡ï¼ŒååŠ©æ°‘ä¼—åšå‡ºå¯¹è‡ªèº«æœ€å¥½çš„é€‰æ‹©ã€‚" width="500" /><figcaption class="wp-caption-text">å¸‚é•¿ç§»æ°‘äº‹åŠ¡åŠžå…¬å®¤å‰¯å±€é•¿æž—é‡‡ç¯±è¡¨ç¤ºï¼Œå¯¹äºŽâ€œå…¬å…±è´Ÿæ‹…â€æ”¿ç­–ï¼Œå¸‚åºœæä¾›æ³•å¾‹æœåŠ¡ï¼ŒååŠ©æ°‘ä¼—åšå‡ºå¯¹è‡ªèº«æœ€å¥½çš„é€‰æ‹©ã€‚ï¼ˆé»„å°å ‚/å¤§çºªå…ƒï¼‰</figcaption></figure>
+<p>æ ¹æ®å¸‚åºœæœ€æ–°å…¬å¸ƒçš„æŠ¥å‘Šåˆ†æžï¼Œä»Ž2018å¹´1æœˆè‡³2019å¹´1æœˆï¼Œå„æ—è£”å…¬æ°‘ï¼ˆCitizenï¼‰å’Œéžå…¬æ°‘ï¼ˆNon-citizenï¼‰é¢†å–<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E7%B2%AE%E9%A3%9F%E5%88%B8.md#1">ç²®é£Ÿåˆ¸</a>ï¼ˆSNAPï¼‰çš„æ¯”ä¾‹çš†æ˜Žæ˜¾ä¸‹é™ã€‚å…¶ä¸­äºšå¤ªè£”ç¬¦åˆæ¡ä»¶çš„éžå…¬æ°‘ï¼ˆNon-citizenï¼‰é¢†å–ç²®é£Ÿåˆ¸æ•°é‡å‡å°‘äº†10.5%ï¼Œè€Œäºšå¤ªè£”å…¬æ°‘ï¼ˆCitizenï¼‰èº«ä»½é¢†å–ç²®é£Ÿåˆ¸çš„å‡å°‘1.2%ï¼Œä¸¤è€…ç›¸å·®8.75å€ä¹‹å¤šã€‚</p>
+<p>è¯¥æŠ¥å‘ŠæŽ¨æµ‹ï¼Œç¬¦åˆèµ„æ ¼çš„ç§»æ°‘å®¶åº­æ”¾å¼ƒé¢†å–ç²®é£Ÿåˆ¸ï¼Œä¸»è¦æ˜¯å› æ‹…å¿§å½±å“æœªæ¥ç§»æ°‘èµ„æ ¼ã€‚å¤–ç•Œä¸€ç›´æµä¼ ï¼Œå·æ™®æ”¿åºœæ‰“ç®—è§„èŒƒç›¸å…³çš„â€œå…¬å…±è´Ÿæ‹…â€ï¼ˆpublic chargeï¼‰æ”¿ç­–ã€‚</p>
+<p>å¸‚é•¿ç§»æ°‘äº‹åŠ¡åŠžå…¬å®¤å‰¯å±€é•¿æž—é‡‡ç¯±ï¼ˆSonia Linï¼‰è®¤ä¸ºï¼Œè™½ç„¶æ²¡æœ‰ç›´æŽ¥çš„å› æžœå…³ç³»è¯æ˜Žï¼Œæ˜¯å› è”é‚¦æ”¿åºœå¯¹â€œå…¬å…±è´Ÿæ‹…â€æ”¿ç­–çš„æ”¹å˜ï¼Œå¯¼è‡´éžå…¬æ°‘æ‹…å¿§é™åˆ¶æœªæ¥ç§»æ°‘èµ„æ ¼çš„å®¡æ‰¹ï¼Œæ‰å¯¼è‡´é¢†å–æ¯”ä¾‹ä¸‹é™ã€‚ä½†æ˜¯ä»–ä»¬å¸Œæœ›æ°‘ä¼—ä¸è¦ææ…Œï¼Œå› è”é‚¦æ”¿åºœè¿˜æœªå¯¹æ­¤å®šæ¡ˆï¼Œçº½çº¦å¸‚åºœæä¾›æ³•å¾‹å’¨è¯¢æœåŠ¡ï¼Œè®¨è®ºä½¿ç”¨å…¬å…±ç¦åˆ©æ˜¯å¦ä¼šå½±å“ç§»æ°‘èº«ä»½ç­‰ã€‚</p>
+<p>è¿‘ä¸¤å¹´æ¥ï¼Œçº½çº¦å¸‚é¢†å–ç²®é£Ÿåˆ¸çš„äººæ•°å¤§å¹…ä¸‹é™ï¼Œé€€å‡ºè¿™é¡¹ç¦åˆ©çš„äººæ•°ï¼Œæ¯”é¢„ä¼°çš„å¤šäº†25,000äººï¼Œè¿™çœä¸‹äº†çº³ç¨Žäººé’±çº¦4åƒä¸‡ç¾Žå…ƒï¼Œä½†ç™½æ€è±ªå¸‚åºœè®¤ä¸ºï¼Œè¿™å°†å¯¹ç»æµŽæ´»åŠ¨å¸¦æ¥å†²å‡»ï¼ŒæŸå¤±7,200ä¸‡çš„ç»æµŽæ•ˆåº”ã€‚</p>
+<p>çº½çº¦å¸‚äººåŠ›èµ„æºç®¡ç†å±€è´Ÿè´£äººGrace Bonillaè¡¨ç¤ºï¼Œä»–ä»¬å¬å¼€è¿™åœºä¼šè®®çš„ç›®çš„ï¼Œæ˜¯å› ä¸ºè§‚å¯Ÿåˆ°éžå…¬æ°‘çš„æ°‘ä¼—ï¼Œå¤§å¹…å‡å°‘é¢†å–ç²®é£Ÿåˆ¸ã€‚ä»–ä»¬å¸Œæœ›çœŸæ­£ç¬¦åˆèµ„æ ¼ã€æœ‰éœ€è¦çš„æ°‘ä¼—ï¼Œåº”è¯¥åŽ»ç”³è¯·å…¬å…±ç¦åˆ©ï¼Œä¾‹å¦‚å­¦ç”Ÿä¸åº”æŒ¨é¥¿è€Œå½±å“å­¦ä¹ ã€‚</p>
+<p>Grace Bonillaä¹Ÿæ‰¿è®¤ï¼Œå·æ™®æ”¿åºœä½¿æ•´ä½“ç»æµŽå¤è‹å’Œå°±ä¸šçŽ‡ä¸Šå‡ï¼Œä½¿é¢†å–ç¦åˆ©çš„äººæ•°ä¸€ç›´åœ¨ä¸‹é™ã€‚ä¸è¿‡ä»–ä»¬æ”¶é›†çš„æ•°æ®æ˜¾ç¤ºï¼Œéžå…¬æ°‘é¢†å–ç²®é£Ÿåˆ¸çš„æ¯”ä¾‹è¾ƒå…¬æ°‘æ˜Žæ˜¾ä¸‹é™è®¸å¤šã€‚</p>
+<p>æž—é‡‡ç¯±å’Œäºšç¾Žè”ç›Ÿç ”ç©¶ä¸Žæ”¿ç­–ä¸»ä»»æ—¶æµ©ç‚œï¼ˆHoward Shihï¼‰çš†å»ºè®®ï¼Œå¦‚æžœç»¿å¡ç”³è¯·å’ŒæŒæœ‰äººæ‹…å¿ƒâ€œå…¬å…±è´Ÿæ‹…â€æ”¿ç­–å˜åŒ–å½±å“ä»–ä»¬çš„èµ„æ ¼ï¼Œå¯ä»¥æ‹¨æ‰“311æ‰¾åˆ°ActionNYCé¡¹ç›®äº†è§£æ›´å¤šä¿¡æ¯ã€‚â—‡</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šå®¶ç‘ž</p>
+
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/6/20/n11334584.htm">±¨¸æ£ºÅ¦Ô¼ÊÐÁìÁ¸Ê³È¯¼õ ÒòÓÇÓ°ÏìÒÆÃñÉí·Ý</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/3/27/n11143552.htm">½ÓÊÜÁ¸Ê³È¯¸¶¿î Å¦Ô¼»ªÒáÃÀ¼×µêÖ÷±»¿Ø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/3/30/n10262491.htm">»ØÖÐ¹ú17¸öÔÂ Å¦Ô¼»ªÒáÀÏÈËÁ¸Ê³È¯ÔâÈ¡Ïû</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/12/21/n8613202.htm">Å¦Ô¼ÖÝÀ©´óÁ¸Ê³È¯¸£Àû »ª²ß»áÏê½â</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/7/8/n8077409.htm">Å¦Ô¼ÖÝ¸®·Å¿íÁ¸Ê³È¯ÉêÇëÌõ¼þ 75Íò¼ÒÍ¥ÊÜÒæ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/4/28/n7780439.htm">Á¸Ê³È¯ÉêÇë Å¦Ô¼ÊÐ¸®ÐèÌá¹©·­Òë·þÎñ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/5/23/n4440977.htm">Å¦Ô¼´È¼ÃÃâ·Ñ´úÀíÁ¸Ê³È¯ÉêÇë</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/4/22/n4417359.htm">Å¦Ô¼ÊÐ¹ÄÀøÓÐ×Ê¸ñÕßÉêÇëÁ¸Ê³È¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/9/4/8/n2488997.htm">Å¦Ô¼ÉêÁìÁ¸Ê³È¯ÕßÔö¼Ó</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11331929.htm">´¨ÆÕ£ºÖÜÈýÃÀÖÐÖØÆôÌ¸ÅÐ ÖÐ·½Ïë´ïÐ­Òé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11331795.htm">¡¾·­Ç½±Ø¿´¡¿¸ÛÈË·ßÅ­´ó±¬·¢ Ï°ÎªºÎÓÖÎóÅÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11331593.htm">ÖÐ¹úÆ÷¹ÙÒÆÖ²Ò½ÔºµØÍ¼½ÒÃØ¡°»îÈËÅ©³¡¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11332395.htm">ÃÀÃ½ÆØ¹â³¯ÏÊÄÚ²¿ÎÄ¼þ£º½ðÕý¶÷ÎÞÒâÆúºË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/5/19/n4437697.htm">È¨ºâÇáÖØ ¹Å´úÊ®ÁùÁ½Ò»½ï´óÓÐÑ§ÎÊ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/15/n11324521.htm">ÎïÀíÑ§¼ÒÃÇÎªºÎÌá³ö¶àÖØÓîÖæ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/12/10/n4592525.htm">ÏÍÄÜÓë»úÖÇ¼æ±¸©¤©¤êÌ×ÓµÄ¹ÊÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/8/n11309277.htm">¡¾ÐþÞÊÈ¡¾­¡¿Ö®Èý£ºÀú¾¡ÏÕ×è ÖÕµÖÓ¡¶È</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11332075.htm">Ó¢ÄÐ·ÖÏíÈçºÎÓëÆÞ×ÓÏàÓöµÄ¹ÊÊÂ ËÆµçÓ°Çé½Ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11332367.htm">¶«¾©¾ÙÐÐÊÀ½ç×î´óÈÕ±¾¾Æ²©ÀÀ»á ÈËÃÇ±é³¢Ãû¾Æ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11332729.htm">ÌìÈÈÊ³ÎïÈÝÒ×·Å»µ£¿ÓªÑøÊ¦½ÌÄã4ÕÐ±£´æ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11331704.htm">ËûÃÇ»îµ½°ÙËêÉíÌåÇ¿½¡ ÖÐÒ½ÍÆÎå¹ÈÑøÉú·¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/15/n11324443.htm">ÂôÍê²Å»Ø¼Ò °ÙËêÀÏÈËÄºÉ«ÖÐÂôÂøÍ· ÍøÓõ¿ì°ï</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11330846.htm">¡¾ÐÂÎÅ¿´µã¡¿ÁÖÖ£ºóÍË±±¾©´ì°Ü ·´ËÍÖÐ¸Õ¿ªÊ¼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/19/n11333692.htm">¡¾ÐÂÎÅ¿´µã¡¿200Íò¸ÛÈË·´ËÍÖÐ ËÄ´óÆôÊ¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11331197.htm">¡¾ÐÂÎÅ¿´µã¡¿G20´¨Ï°»áÇÃ¶¨ Ï°·Ã³¯±³ºóÐþ»ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11331271.htm">´¨Ï°G20»áÎî ÃÀÖÐ¹Ù·½Í¨¸æ´ó²»Í¬</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11331391.htm">·ÖÎö£ºÏ°½üÆ½ÎªºÎÎóÅÐÏã¸ÛÃñÒâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11329350.htm">¡¾·­Ç½±Ø¿´¡¿¸Û°æ¡°Ì¹¿ËÈË¡±ÕÕÆ¬·çÃÒÈ«Çò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/17/n11328934.htm">·µ¸ÛÊ×ÈÕÖ÷³Ö½ÚÄ¿ Ö£Ô£ÁáßìÑÊ£ºÒªÕäÏ§ÄêÇáÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/17/n11327427.htm">°¢ÏèÎªÓâ¾ØÐÐÎªµÀÇ¸ ÆÞÊ×·¢Éù£ºÈÌÍ´Ô­ÁÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/17/n11328607.htm">½ðÂí½±ÔâÖÐ¹²×²ÆÚ ÍøÓÑ£º´óÂ½Ó°ÈË±»ÆÈÑ¡±ßÕ¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11331531.htm">Èý¸ö¶ù×Ó¶¼´ÓË¹Ì¹¸£±ÏÒµ ³ÂÃÀÁä¸Ð¶÷ÓÖ½¾°Á</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11329594.htm">ÕâÖ»Ð¡¹·Ò»¿´µ½Ñ¼×Ó¾Í»èµ¹ ËÄ½Å³¯Ìì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/5/19/n4437697.htm">È¨ºâÇáÖØ ¹Å´úÊ®ÁùÁ½Ò»½ï´óÓÐÑ§ÎÊ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/15/n11324521.htm">ÎïÀíÑ§¼ÒÃÇÎªºÎÌá³ö¶àÖØÓîÖæ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/12/10/n4592525.htm">ÏÍÄÜÓë»úÖÇ¼æ±¸©¤©¤êÌ×ÓµÄ¹ÊÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/18/n11331531.htm">Èý¸ö¶ù×Ó¶¼´ÓË¹Ì¹¸£±ÏÒµ ³ÂÃÀÁä¸Ð¶÷ÓÖ½¾°Á</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/8/n11309277.htm">¡¾ÐþÞÊÈ¡¾­¡¿Ö®Èý£ºÀú¾¡ÏÕ×è ÖÕµÖÓ¡¶È</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/9/4/8/n2488997.md#1">çº½çº¦ç”³é¢†ç²®é£Ÿåˆ¸è€…å¢žåŠ </a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/15/4/22/n4417359.md#1">çº½çº¦å¸‚é¼“åŠ±æœ‰èµ„æ ¼è€…ç”³è¯·ç²®é£Ÿåˆ¸</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/15/5/23/n4440977.md#1">çº½çº¦æ…ˆæµŽå…è´¹ä»£ç†ç²®é£Ÿåˆ¸ç”³è¯·</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/4/28/n7780439.md#1">ç²®é£Ÿåˆ¸ç”³è¯· çº½çº¦å¸‚åºœéœ€æä¾›ç¿»è¯‘æœåŠ¡</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/7/8/n8077409.md#1">çº½çº¦å·žåºœæ”¾å®½ç²®é£Ÿåˆ¸ç”³è¯·æ¡ä»¶ 75ä¸‡å®¶åº­å—ç›Š</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/12/21/n8613202.md#1">çº½çº¦å·žæ‰©å¤§ç²®é£Ÿåˆ¸ç¦åˆ© åŽç­–ä¼šè¯¦è§£</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/3/30/n10262491.md#1">å›žä¸­å›½17ä¸ªæœˆ çº½çº¦åŽè£”è€äººç²®é£Ÿåˆ¸é­å–æ¶ˆ</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/19/3/27/n11143552.md#1">æŽ¥å—ç²®é£Ÿåˆ¸ä»˜æ¬¾ çº½çº¦åŽè£”ç¾Žç”²åº—ä¸»è¢«æŽ§</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485455.md#1">å‘Šåˆ«æœ€åŽç¾Žèˆªç­ ç©ºæœå“½å’½åŠ¨å®¹</a></li>
+<li><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482605.md#1">â€œæ‰“å€’ä¸­å…±æ¶é­”â€å…¨çƒå¾ç­¾ è¶…12ä¸‡äººè¿žç½²</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=6&t=&d=https://github.com/dfh2/djy/blob/master/gb/19/6/20/n11334584.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/dfh2/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/dfh2/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/dfh2/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/dfh2/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh2/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/22/n11539349.md#1" target="_blank">å…±äº§æš´æ”¿å½•ï¼šä»Žæ¯›æ³½ä¸œè¯—è¯è°ˆä¸­å…±å–å›½</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">é˜¿è‚¯è‰²å·žå‚è®®é™¢é€šè¿‡å†³è®®æ¡ˆ åˆ¶æ­¢ä¸­å…±å¼ºæ‘˜å™¨å®˜</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/14/n12474369.md#1">æ—¥æœ¬å‡ºçŽ°â€œUFOç©ºæˆ˜â€ç”»é¢ å¤šä¸ªè¿½èµ¶ä¸€ä¸ª</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12479879.md#1">æ›¾é¢„è¨€å·æ™®å½“é€‰ ä¼ æ•™å£«ï¼šä¸Šå¸æ´¾å¤©ä½¿åŠ©è¿žä»»</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/30/n12440550.md#1">ã€Šåœ£ç»ã€‹ä¸Žã€ŠæŽ¨èƒŒå›¾ã€‹é¢„è¨€çš„åº”éªŒä¸Žå˜æ¢1</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/3/n12378281.md#1">ã€è¥¿å®‰äº‹å˜?è’‹å®‹å¤«å¦‡ã€‘å¤©é™ç¥žè°• ä½¿å‘½ä¹‹è¡Œ</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/26/n12433135.md#1">æµŽå…¬è¢ˆè£Ÿç½©å±± å¤äº•è¿æœ¨</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482835.md#1">ã€åå­—è·¯å£ã€‘æ‹œç™»å®¶å†çˆ†é€šå…±é—¨ ä¸­å…±æ¸—é€è”åˆå›½</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482472.md#1">ã€æ‹æ¡ˆæƒŠå¥‡ã€‘æ‹œç™»å®¶æ—é€šå…±ï¼Ÿä¹ ä¸ºä½•çªç„¶å›žäº¬</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483231.md#1">ã€çè¨€çœŸè¯­ã€‘æ¡‘æ™®ï¼šä¹ è¿‘å¹³å—å·¡ ä¸Šæ¼”éšœçœ¼æ³•</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481651.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ä¹ çªè¿”äº¬æˆ–3åŽŸå›  æ‹œç™»å®¶ä¸‘é—»è¿žçˆ†</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482129.md#1">èµµç«‹åšè¯¬è”‘ç¾Žå†›æ’­æ¯’è®ºä»¤å·æ™®æ„¤æ€’è‡³æž</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482636.md#1">å¤§é™†äºŒæ‰‹æˆ¿å¸‚åœºåˆ†åŒ–ä¸¥é‡ æˆ¿åœ°äº§æ³¡æ²«è¦ç ´ï¼Ÿ</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481456.md#1">åˆ˜è¯—è¯—è‡ªæ›ä¸æ„¿ä¸Šç»¼è‰º ä¸ªä¸­åŽŸå› ä»¤äººåƒæƒŠ</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481895.md#1">ä¼ å‘¨æ˜Ÿé©°é‡é‡‘ç»­çº¦æž—å… ä¸ºå¯¹èµŒåè®®æ·»ä¿éšœ</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/15/n12479366.md#1">ç« å­æ€¡å½“è£ç¼å‰ªTæ¤ äº²è‡ªç§€æ¨¡ç‰¹å„å¼ç©¿æ­</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICEå®šå»¶å¿ƒç†ä¸å®‰ æš‚ä¸å‚ä¸Žæ­£è§„äºŒè¾‘ç­‰æ´»åŠ¨</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484792.md#1">æ´ªé‡‘å®æ‹„æ‹æ–è¿‘ç…§æ›å…‰ ç½‘æ°‘æƒŠè®¶</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12480422.md#1">å®ç‰¹ç“¶å½“æ°´å£¶ 10å²å¥³ç«¥çš®è‚¤æµæ±¤ã€æœˆç»ææ—©æ¥</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12479879.md#1">æ›¾é¢„è¨€å·æ™®å½“é€‰ ä¼ æ•™å£«ï¼šä¸Šå¸æ´¾å¤©ä½¿åŠ©è¿žä»»</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481545.md#1">è‡ªåˆ¶3æ¯å¤©ç„¶è¿åŠ¨é¥®æ–™ æå‡å…ç–«åŠ›ã€æ”¹å–„ç–²åŠ³</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12480185.md#1">11å¤©è¿žé£ž1.2ä¸‡å…¬é‡Œ å‡ ç™¾å…‹é‡å°é¸Ÿåˆ›ä¸–ç•Œçºªå½•</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481202.md#1">æ¢å­£æµé¼»æ°´ã€çš®è‚¤ç—’ï¼Ÿè¿‡æ•è‡ªæ•‘æœ‰ä¸€å¥—</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/nsxsof363/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/nsxsof363/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/6/20/n11334584.htm">æŠ¥å‘Šï¼šçº½çº¦å¸‚é¢†ç²®é£Ÿåˆ¸å‡ å› å¿§å½±å“ç§»æ°‘èº«ä»½</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nsxsof363/djy/blob/master/gb/19/6/20/n11334584.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/nsxsof363/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/nsxsof363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/nsxsof363/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nsxsof363/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
