--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/3/n10021983.md#1" target="_blank">杨宁：官司风波再起 红色舞剧洗脑没商量</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/26/n4648466.md#1" target="_blank">在法轮大法中修炼重生的宁德人（二）</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139150.md#1" target="_blank">袁斌：中共非法抢劫剥夺富人财产的真相</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/30/n7475279.md#1" target="_blank">儿子长出新脾脏 医生惊呼不可能</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
